cursor pointer foi adicionado ao botão

--- a/Adivinhe o Número/CSS/estilos.css
+++ b/Adivinhe o Número/CSS/estilos.css
@@ -48,6 +48,12 @@ button {
 
 }
 
+.container button:hover{
+  transition: all 0,3s;
+  cursor: pointer;
+  box-shadow: #191414;
+}
+
 input {
 
   padding: 10px;
